--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,11 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://rit.pics" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 #github_username:  jekyll
+
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
