--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,9 @@ description: > # this means to ignore newlines until "baseurl:"
   Track trash pickups and get achievements!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://rit.pics" # the base hostname & protocol for your site
-#twitter_username: jekyllrb
-#github_username:  jekyll
+
+# Limit what is hosted on the site.
+exclude: ["CNAME", "Gemfile", "Gemfile.lock", "README.md"]
 
 
 defaults:
