--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-# Welcome to Jekyll!
-#
 # This config file is meant for settings that affect your whole blog, values
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
@@ -12,7 +10,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Track trash pickups and get achievements!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://rit.pics" # the base hostname & protocol for your site
-permalink: pretty
+permalink: pretty # to remove the ".html" extension when serving file
 
 # Limit what is hosted on the site.
 exclude: ["CNAME", "Gemfile", "Gemfile.lock", "README.md"]
