--- a/favicons/manifest.json
+++ b/favicons/manifest.json
@@ -38,7 +38,7 @@
 			"density": "4.0"
 		}
 	],
-	"start_url": "https:\/\/rit.pics",
+	"start_url": "https:\/\/trash.pics",
 	"display": "standalone",
 	"orientation": "portrait"
 }
